# MATH156-Finalproject

./: .gitmodules  README.md
Rvideo/: CS_GL_FQ.csv  create.py  createmodel.py  exceptions.txt  mse.txt  nnselection.csv  predictedData.csv  predictedData2.csv  preprocess.R  preprocess.Rmd  preprocess.tex  runmodel.py
Rvideo/ann/: saved_model.pb
Rvideo/ann/variables/: variables.data-00000-of-00001  variables.index
Rvideo/ann2/: saved_model.pb
Rvideo/ann2/variables/: variables.data-00000-of-00001  variables.index
bins/: command.sh
docs/: PROPOSAL.md  main.aux  main.fdb_latexmk  main.fls  main.nav  main.out  main.snm  main.tex  main.toc  main.vrb
docs/sections/: ann.tex
docs/slides/: main.aux  main.fdb_latexmk  main.fls  main.nav  main.out  main.snm  main.tex  main.toc  main.vrb
docs/slides/sections/: ann.tex  knn.tex  preprocess.tex  random_forest.tex
src/: CMakeCache.txt  CMakeLists.txt  Makefile  __init__.py  algorithms.py  cmake_install.cmake  helper.py  main.py  models.py  pca.py  plotting.py  preprocess.py
src/algorithms/: algorithms.cpp  algorithms.py  temp.cpp
src/docs/: helper.md  workflow.md
tests/: test_helper.py
tests/test_data/: sample.csv
